--- a/hwsw.tex
+++ b/hwsw.tex
@@ -268,7 +268,7 @@ thermostats. With a simple LCD combined with a touchscreen, users now have a
 way to control and query their home without having to find their phone.
 
 For our LCD touchscreen, we have choosen Adafruit's 2.8" TFT\footnotemark{} with
-resistive touch, which uses the \href{}{ILI9341 chipset}. There are
+resistive touch, which uses the \href{http://www.newhavendisplay.com/app_notes/ILI9341.pdf}{ILI9341 chipset}. There are
 \href{https://github.com/adafruit/Adafruit_ILI9341/tree/master/examples}{plenty
 of usage examples} and Adafruit's
 \href{https://learn.adafruit.com/adafruit-2-dot-8-color-tft-touchscreen-breakout-v2}{excellent
