--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,49 @@
 % Section 1 in file summary.tex
+The Wireless Home Control System is meant to be a solution for any homeowner to
+be able to remotely control core appliances of their home. The WHCS vision is
+to allow the user to control lights, outlets, doors, and sensors around their
+home. The system{}'s design philosophy emphasizes ease of use, affordability,
+and effectiveness. An Android phone application developed for WHCS will allow
+users to monitor the state of the installed components and activate them
+remotely. A central base station equipped with a touch{}-enabled LCD will be
+present to allow the users to interact with the system without the need of a
+phone. Peripheral control modules will be installed into the targeted
+appliances such as lights, outlets, and doors for WHCS to control. Together the
+phone, base station, and peripheral control modules will constitute WHCS.
 
+The implementation of such a system requires research in a myriad of fields to
+produce a full{}-fledged product. Android software development is the core for
+creating the users first impression with WHCS. Research must be conducted to
+conform to the design philosophies of the Android ecosystem. The alternative
+interface offered for WHCS will be the base station{}'s display, as a result
+the best solution for a touch capable LCD will be examined. Communication
+devices will form the foundation for the wireless aspect of WHCS, thus an
+investigation into the advantages of different communication modules is
+required to realize the system. A network protocol will need to be planned out
+and implemented in order to form a unified system from the independent modules.
+The activation of appliances around the home requires high voltage control, so
+methodologies for properly harnessing the power provided by homes are a
+requirement. To extend upon harnessing the home{}'s power, our individual
+control modules and base station{}'s logic level voltage depend upon the
+creation of an efficient way to step down the high voltage supplied to the
+home. Efficient forms of rectification and power provision will need to be
+researched for WHCS to be self{}-sufficient. Important research and critical
+design decisions will go into the development of the printed circuit boards
+that will provide the foundation for all the hardware of WHCS.
+
+Wireless Home Control System is a solution targeting the masses and designed by
+few. Naturally such a system will suffer from the constraints imposed upon the
+creators. Most prominent of all constraints are those stemming from economics.
+The development and production of WHCS will have to conform to the low budget
+available. Design decisions will be made to minimize overall cost of the system
+to satisfy this constraint. WHCS has the potential for mass implementation if
+user reception is positive so the design will adhere to manufacturing
+constraints. The parts used in the system will be chosen so that they are
+widely available. Our boards and parts will be designed so that they are easy
+to replicate and manufacture. With a product such as WHCS health and safety is
+clearly an issue. The system is meant to be installed inside the home where the
+user should feel at use with the system installed. Thus it is ethical for us to
+put effort into making the system safe to use. Things such as controlling the
+home{}'s high voltage will have to be done in a safe manner. Security is
+another strong constraint attributed to products targeting the home. The system
+will be designed to maximize security for our users.
